--- a/exercises/hero-image.html
+++ b/exercises/hero-image.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shah Fahad 73876</title>
+    <title>Syed Muhammad Taqi Zaidi 72978</title>
     <meta name="description" content="A hero block with a background image and a tinted overlay.">
     <link rel="stylesheet" href="assets/css/hero-image.css">
 </head>
