--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -142,7 +142,7 @@
 
 		<ul class="footer-icons">
 			<li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://syedmuhammadtaqizaidi.github.io/SyedTaqi.github.io/" target="_blank"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="https://syedmuhammadtaqizaidi.github.io/" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
 		<p class="privacy"><a href="../privacy.html">Privacy &amp; Legal</a></p>
